Adjustments to font sizes to make all pages uniform

--- a/styles/articles.css
+++ b/styles/articles.css
@@ -15,7 +15,7 @@ body {
 }
 
 .title {
-  font-size: 1.5rem;
+  font-size: 2rem;
   display: inline-block;
   width: 100%;
   margin: 0 auto;
@@ -33,14 +33,18 @@ body {
   cursor: pointer;
 }
 
-.nav a,
-.article-content a {
+.nav a {
   color: black;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 .article-content {
   padding: 1rem;
+}
+
+.article-content a {
+  color: black;
+  font-size: 1.2rem;
 }
 
 .nav-item {
@@ -72,4 +76,16 @@ body {
   display: block;
   text-align: center;
   padding: 1rem;
+}
+
+.name {
+  font-size: 1.75rem;
+}
+
+.description {
+  font-size: 1.5rem;
+}
+
+.text {
+  font-size: 1.2rem;
 }
