--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,11 @@ body {
 }
 
 .title {
-  font-size: 1.5rem;
+  font-size: 2rem;
+  display: inline-block;
+  width: 100%;
+  margin: 0 auto;
+  color: black;
   text-align: center;
   padding: 1rem 0;
   background: rgb(255, 233, 220);
@@ -24,11 +28,13 @@ body {
 .nav {
   display: flex;
   justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .nav a {
   color: black;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 .nav-item {
@@ -53,4 +59,9 @@ body {
   margin: 0 auto;
   padding: 0 2rem 2rem;
   max-width: 50rem;
+}
+
+.text {
+  font-size: 1.2rem;
+  padding: 0 0 1rem 0;
 }
