--- a/styles/resources.css
+++ b/styles/resources.css
@@ -16,6 +16,7 @@ body {
 
 .title {
   font-size: 2rem;
+  font-family: "Economica", sans-serif;
   display: inline-block;
   width: 100%;
   margin: 0 auto;
@@ -35,6 +36,7 @@ body {
 .nav a {
   color: black;
   font-size: 1.5rem;
+  font-family: "Economica", sans-serif;
 }
 
 .nav-item {
@@ -65,6 +67,7 @@ body {
   text-align: center;
   padding: 1rem;
   font-size: 1.75rem;
+  font-family: "Economica", sans-serif;
 }
 
 .resources,
