--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@ body {
 
 .title {
   font-size: 2rem;
+  font-family: "Economica", sans-serif;
   display: inline-block;
   width: 100%;
   margin: 0 auto;
@@ -35,6 +36,7 @@ body {
 .nav a {
   color: black;
   font-size: 1.5rem;
+  font-family: "Economica", sans-serif;
 }
 
 .nav-item {
