--- a/styles/articles.css
+++ b/styles/articles.css
@@ -4,6 +4,7 @@
   padding: 0;
   text-decoration: none;
   list-style: none;
+  color: black;
 }
 
 body {
@@ -20,7 +21,6 @@ body {
   display: inline-block;
   width: 100%;
   margin: 0 auto;
-  color: black;
   text-align: center;
   padding: 1rem 0;
   background: rgb(255, 233, 220);
@@ -30,11 +30,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
 }
 
 .nav a {
-  color: black;
   font-size: 1.5rem;
   font-family: "Economica", sans-serif;
 }
@@ -43,16 +41,14 @@ body {
   justify-items: center;
 }
 
-.article-content {
-  padding: 1rem;
-}
-
-.article-content a {
-  color: black;
+.article-content a,
+.text {
   font-size: 1.2rem;
 }
 
-.nav-item {
+.nav-item,
+.img,
+.article-content {
   padding: 1rem;
 }
 
@@ -60,13 +56,13 @@ body {
 .article-content a:hover,
 .title:hover {
   color: rgb(104, 102, 102);
+  cursor: pointer;
 }
 
 .img {
   height: 50vh;
   width: 100%;
   object-fit: cover;
-  padding: 1rem;
 }
 
 .container {
@@ -92,10 +88,6 @@ body {
 
 .description {
   font-size: 1.5rem;
-}
-
-.text {
-  font-size: 1.2rem;
 }
 
 @media screen and (min-width: 48rem) {
