Added tune pages, dropdown menu, and made the collective pages more uniform

--- a/styles/articles.css
+++ b/styles/articles.css
@@ -2,8 +2,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  text-decoration: none;
-  list-style: none;
   color: black;
 }
 
@@ -12,7 +10,10 @@ body {
 }
 
 .header {
-  background: rgb(247, 226, 181);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
 }
 
 .title {
@@ -26,10 +27,19 @@ body {
   background: rgb(255, 233, 220);
 }
 
+.title,
+.nav-item,
+.nav-item a,
+.dropdown-item {
+  text-decoration: none;
+  list-style: none;
+}
+
 .nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  background: rgb(247, 226, 181);
 }
 
 .nav a {
@@ -63,6 +73,7 @@ body {
   height: 50vh;
   width: 100%;
   object-fit: cover;
+  margin-top: calc(17vh);
 }
 
 .container {
@@ -84,6 +95,40 @@ body {
 .name {
   font-size: 1.75rem;
   font-family: "Economica", sans-serif;
+}
+
+.dropdown {
+  background: rgb(247, 226, 181);
+  position: absolute;
+  z-index: 999;
+  border-radius: 0.35rem;
+  box-shadow: 0 0.2rem 0.1rem rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 250ms ease-in-out;
+}
+
+.dropdown-menu {
+  position: relative;
+  left: -1.25rem;
+}
+
+.dropdown-item {
+  margin: 1.25rem;
+}
+
+.dropdown-item a {
+  font-size: 1rem;
+  font-family: inherit;
+}
+
+li:hover .dropdown {
+  display: block;
+  top: 100%;
+  left: 0;
+  opacity: 0;
+  transform: scale(1, 1);
+  opacity: 1;
+  transition: opacity 150ms ease-in-out 150ms;
 }
 
 .description {
