--- a/styles/articles.css
+++ b/styles/articles.css
@@ -27,7 +27,16 @@ body {
   background: rgb(255, 233, 220);
 }
 
-.title,
+.title-text {
+  text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.25);
+}
+
+.nav-name,
+.name {
+  text-shadow: 0.08rem 0.08rem 0.08rem rgba(0, 0, 0, 0.25);
+}
+
+.title a,
 .nav-item,
 .nav-item a,
 .dropdown-item {
@@ -43,7 +52,7 @@ body {
 }
 
 .nav a {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   font-family: "Economica", sans-serif;
 }
 
@@ -73,7 +82,8 @@ body {
   height: 50vh;
   width: 100%;
   object-fit: cover;
-  margin-top: calc(17vh);
+  margin-top: calc(23vh);
+  border-radius: 1.5rem;
 }
 
 .container {
