--- a/styles/resources.css
+++ b/styles/resources.css
@@ -27,7 +27,17 @@ body {
   background: rgb(255, 233, 220);
 }
 
-.title,
+.title-text {
+  text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.25);
+}
+
+.nav-name,
+.name,
+.group {
+  text-shadow: 0.08rem 0.08rem 0.08rem rgba(0, 0, 0, 0.25);
+}
+
+.title a,
 .nav-item,
 .nav-item a,
 .resource-content,
@@ -44,12 +54,11 @@ body {
 }
 
 .nav a {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   font-family: "Economica", sans-serif;
 }
 
 .nav-item,
-.name,
 .img {
   padding: 1rem;
 }
@@ -65,7 +74,8 @@ body {
   height: 50vh;
   width: 100%;
   object-fit: cover;
-  margin-top: calc(17vh);
+  margin-top: calc(23vh);
+  border-radius: 1.5rem;
 }
 
 .container {
@@ -117,13 +127,21 @@ li:hover .dropdown {
   text-align: center;
 }
 
+.group {
+  font-size: 1.4rem;
+  font-weight: 525;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  text-decoration: none;
+  display: inline-block;
+}
+
 .resources,
 .text {
   font-size: 1.2rem;
 }
 
 .text {
-  padding: 0 0 1rem 0;
+  padding: 1rem 0 1rem;
 }
 
 @media screen and (min-width: 48rem) {
