--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,6 +27,14 @@ body {
   background: rgb(255, 233, 220);
 }
 
+.title-text {
+  text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.25);
+}
+
+.nav-name {
+  text-shadow: 0.08rem 0.08rem 0.08rem rgba(0, 0, 0, 0.25);
+}
+
 .title,
 .nav-item,
 .nav-item a,
@@ -43,7 +51,7 @@ body {
 }
 
 .nav a {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
   font-family: "Economica", sans-serif;
 }
 
@@ -60,7 +68,8 @@ body {
   height: 50vh;
   width: 100%;
   object-fit: cover;
-  margin-top: calc(17vh);
+  margin-top: calc(23vh);
+  border-radius: 1.5rem;
 }
 
 .container {
