--- a/styles/resources.css
+++ b/styles/resources.css
@@ -65,7 +65,7 @@ body {
 
 .nav a:hover,
 .resource-content a:hover,
-.title:hover {
+.title a:hover {
   color: rgb(104, 102, 102);
   cursor: pointer;
 }
