--- a/styles/resources.css
+++ b/styles/resources.css
@@ -17,7 +17,7 @@ body {
 }
 
 .title {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: "Economica", sans-serif;
   display: inline-block;
   width: 100%;
@@ -31,10 +31,13 @@ body {
   text-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.25);
 }
 
-.nav-name,
+.nav-name {
+  text-shadow: 0.08rem 0.08rem 0.08rem rgba(0, 0, 0, 0.15);
+}
+
 .name,
 .group {
-  text-shadow: 0.08rem 0.08rem 0.08rem rgba(0, 0, 0, 0.25);
+  text-shadow: 0.08rem 0.08rem 0.08rem rgba(0, 0, 0, 0.1);
 }
 
 .title a,
@@ -54,12 +57,14 @@ body {
 }
 
 .nav a {
-  font-size: 1.75rem;
+  font-size: 1.25rem;
   font-family: "Economica", sans-serif;
 }
 
 .nav-item,
-.img {
+.img,
+.text,
+.resources {
   padding: 1rem;
 }
 
@@ -71,17 +76,22 @@ body {
 }
 
 .img {
-  height: 50vh;
   width: 100%;
   object-fit: cover;
-  margin-top: calc(23vh);
+  margin-top: calc(20vh);
   border-radius: 1.5rem;
 }
 
-.container {
-  margin: 0 auto;
-  padding: 0 2rem 2rem;
+.container-content {
+  margin: 1rem 2rem 2rem;
   max-width: 50rem;
+  background: rgb(253, 251, 245);
+  border-radius: 0.5rem;
+  box-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
+}
+
+.container {
+  padding-bottom: 3rem;
 }
 
 .name {
@@ -140,12 +150,39 @@ li:hover .dropdown {
   font-size: 1.2rem;
 }
 
-.text {
-  padding: 1rem 0 1rem;
+.resource-content {
+  margin-bottom: 1rem;
 }
 
 @media screen and (min-width: 48rem) {
+  .title {
+    font-size: 2rem;
+  }
+
+  .nav a {
+    font-size: 1.75rem;
+  }
+
+  .dropdown-item a {
+    font-size: 1rem;
+  }
+
+  .img {
+    margin-top: calc(22vh);
+  }
+
   .container {
-    max-width: 60rem;
+    margin: 0 1rem;
+  }
+}
+
+@media screen and (min-width: 53.75rem) {
+  .container-content {
+    margin: 1rem auto;
+  }
+
+  .img {
+    height: 65vh;
+    margin-top: calc(23vh);
   }
 }
