--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@ body {
 }
 
 .title {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: "Economica", sans-serif;
   display: inline-block;
   width: 100%;
@@ -51,7 +51,7 @@ body {
 }
 
 .nav a {
-  font-size: 1.75rem;
+  font-size: 1.25rem;
   font-family: "Economica", sans-serif;
 }
 
@@ -67,15 +67,15 @@ body {
 }
 
 .img {
-  height: 50vh;
+  /* height: 30vh; */
   width: 100%;
   object-fit: cover;
-  margin-top: calc(23vh);
+  margin-top: calc(20vh);
   border-radius: 1.5rem;
 }
 
 .container-content {
-  margin: 1rem 2rem;
+  margin: 0 2rem;
   max-width: 50rem;
   background: rgb(253, 251, 245);
   border-radius: 0.5rem;
@@ -131,8 +131,35 @@ li:hover .dropdown {
   text-decoration: none;
 }
 
+@media screen and (min-width: 48rem) {
+  .title {
+    font-size: 2rem;
+  }
+
+  .nav a {
+    font-size: 1.75rem;
+  }
+
+  .dropdown-item a {
+    font-size: 1rem;
+  }
+
+  .img {
+    margin-top: calc(22vh);
+  }
+
+  .container {
+    margin: 0 1rem;
+  }
+}
+
 @media screen and (min-width: 53.75rem) {
   .container-content {
     margin: 0 auto;
+  }
+
+  .img {
+    height: 65vh;
+    margin-top: calc(23vh);
   }
 }
