--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,8 +16,12 @@ body {
   z-index: 999;
 }
 
-.title {
+.title,
+.description {
   font-size: 1.5rem;
+}
+
+.title {
   font-family: "Economica", sans-serif;
   display: inline-block;
   width: 100%;
@@ -35,9 +39,16 @@ body {
   text-shadow: 0.08rem 0.08rem 0.08rem rgba(0, 0, 0, 0.15);
 }
 
+.name,
+.group {
+  text-shadow: 0.08rem 0.08rem 0.08rem rgba(0, 0, 0, 0.1);
+}
+
 .title,
+.title-text a,
 .nav-item,
 .nav-item a,
+.resource-content,
 .dropdown-item {
   text-decoration: none;
   list-style: none;
@@ -50,45 +61,83 @@ body {
   background: rgb(247, 226, 181);
 }
 
-.nav a {
+.nav a,
+h3 {
   font-size: 1.25rem;
   font-family: "Economica", sans-serif;
 }
 
 .nav-item,
-.img {
+.img,
+.text,
+.resources,
+.article-content,
+.description {
   padding: 1rem;
 }
 
+.articles {
+  justify-items: center;
+}
+
+.sub-heading {
+  padding: 0.5rem;
+}
+
+.tunes-week {
+  margin: 2rem 1rem 2rem;
+}
+
+.tunes-list {
+  margin-top: 2rem;
+}
+
 .nav a:hover,
-.group:hover {
+.group:hover,
+.title a:hover,
+.subject a:hover,
+.text a:hover,
+.tune-name a:hover,
+.resource-content a:hover {
   color: rgb(104, 102, 102);
   cursor: pointer;
 }
 
 .img {
-  /* height: 30vh; */
   width: 100%;
   object-fit: cover;
   margin-top: calc(20vh);
   border-radius: 1.5rem;
 }
 
-.container-content {
+.cc-home {
   margin: 0 2rem;
+}
+
+.cc-tunes,
+.cc-resources {
+  margin: 1rem 2rem 2rem;
+}
+
+.container-content {
   max-width: 50rem;
   background: rgb(253, 251, 245);
   border-radius: 0.5rem;
-  box-shadow: 0.2rem 0.2rem 0.2rem rgba(0, 0, 0, 0.1);
+  box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.15);
 }
 
 .container {
   padding-bottom: 3rem;
 }
 
-.text {
-  font-size: 1.2rem;
-  padding: 1rem;
+.name {
+  font-size: 1.75rem;
+  font-family: "Economica", sans-serif;
+}
+
+.name,
+.resource-content {
+  margin-bottom: 1rem;
 }
 
 .dropdown {
@@ -125,13 +174,48 @@ li:hover .dropdown {
   transition: opacity 150ms ease-in-out 150ms;
 }
 
-.group {
+.group-home {
   font-weight: 550;
+}
+
+.group {
+  display: inline-block;
+  font-size: 1.4rem;
+  font-weight: 525;
   font-family: Georgia, "Times New Roman", Times, serif;
   text-decoration: none;
 }
 
+.centered-content {
+  text-align: center;
+}
+
+.subject a,
+.text,
+.tune-name,
+.resources,
+.article-content a {
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+}
+
+.tune-name {
+  list-style: none;
+  text-align: center;
+  padding: 0.3rem 0.5rem;
+}
+
 @media screen and (min-width: 48rem) {
+  .container-content {
+    box-shadow: 0.8rem 0.8rem 0.8rem rgba(0, 0, 0, 0.15);
+  }
+
+  .articles {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   .title {
     font-size: 2rem;
   }
