--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,6 +105,7 @@ h3 {
 }
 
 .img {
+  height: 75vh;
   width: 100%;
   object-fit: cover;
   margin-top: 9rem;
@@ -140,6 +141,31 @@ h3 {
   margin: 0 auto;
   padding: 1rem;
   max-width: 50rem;
+}
+
+.vidwrapper,
+.musicPlayer {
+  width: 100%;
+  max-width: 50rem;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+.vidcontainer {
+  width: 100%;
+  max-width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  position: relative;
+}
+
+.vidcontainer iframe {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .img-tune {
