--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,10 @@ body {
   width: 100%;
   z-index: 999;
 }
+.header-tunes {
+  position: relative;
+  padding-bottom: 3rem;
+}
 
 .title,
 .description {
